# user-retention-risk

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  PHASE4_IMPLEMENTATION.md  README.md  coverage_report.txt  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: api-engineer.md  code-reviewer.md  data-engineer.md  devops-engineer.md  ml-engineer.md  test-engineer.md
.claude/commands/: deploy.md  run-tests.md
.github/workflows/: ci.yml  deploy.yml
backend/: requirements.txt  seed_real_users.py  seed_risk_scores.py
backend/app/: auth.py  main.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/ml/: explainer.py  features.py  model.py
backend/app/routers/: alerts.py  cohorts.py  health.py  pipeline.py  users.py
backend/app/schemas/: risk.py
backend/app/scripts/: seed_test_data.py
backend/tests/: conftest.py  test_additional_coverage.py  test_api.py  test_coverage_gaps.py  test_db.py  test_endpoints.py  test_explainer.py  test_features.py  test_health.py  test_model.py  test_pipeline.py  test_router_integration.py  test_routers.py  test_schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
infrastructure/: .dockerignore  Dockerfile  docker-compose.yml
infrastructure/ecs/: task-definition.json
ml/: ai_analysis.py  data_gen.py  data_loader.py  feature_engineering.py  model_card.md  train.py
ml/artifacts/: correlation_report.json  feature_names.json
ml/data/: sparkify_mini.json
n8n/: rescore_pipeline.json
(+3 files in other folders)
